--- a/public/css/estilos.css
+++ b/public/css/estilos.css
@@ -5,6 +5,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body{
@@ -80,11 +81,12 @@ body{
 }
 
 .menu__link--inside{
-    padding: 30px 100px 30px 20px;
+    padding: 10px 70px 10px 20px;
 }
 
 .menu__link--inside:hover{
     background-color: #798499;
+    
 }
 
 .menu__hamburguer{
